添加web socket 简单实现

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <!--shiro相关-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
